feature: basic auth ionic - list items
